--- a/blog/another-post.mdx
+++ b/blog/another-post.mdx
@@ -1,13 +1,7 @@
 ---
-title: "My First Post"
-date: "2021-07-23"
-slug: "my-first-post"
+title: "Another Post"
+date: "2021-07-24"
+slug: "another-post"
 ---
 
-This is my first blog post! Isn't it *great*?
-
-Some of my **favorite** things are:
-
-* Petting dogs
-* Singing
-* Eating potato-based foods
+Here's another post! It's even better than the first one!
