--- a/blog/my-first-post.mdx
+++ b/blog/my-first-post.mdx
@@ -1,7 +1,13 @@
 ---
-title: "Another Post"
-date: "2021-07-24"
-slug: "another-post"
+title: "My First Post"
+date: "2021-07-23"
+slug: "my-first-post"
 ---
 
-Here's another post! It's even better than the first one!
+This is my first blog post! Isn't it *great*?
+
+Some of my **favorite** things are:
+
+* Petting dogs
+* Singing
+* Eating potato-based foods
