Finished Gatsby Tutorial Part 7

--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -2,6 +2,10 @@
 title: "My First Post"
 date: "2021-07-23"
 slug: "my-first-post"
+hero_image: "./wlodzimierz-jaworski-Aea6P55bZzw-unsplash.jpg"
+hero_image_alt: "A sunset in lake"
+hero_image_credit_text: "Wlodzimierz Jaworski"
+hero_image_credit_link: "https://unsplash.com/photos/Aea6P55bZzw"
 ---
 
 This is my first blog post! Isn't it *great*?
